--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "flightsandsearch",
-  "version": "1.0.0",
-  "description": "Microservice for handling FLIGHT CRUD",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Vishal",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20"
-  }
+    "name": "flightsandsearch",
+    "version": "1.0.0",
+    "description": "Microservice for handling FLIGHT CRUD",
+    "main": "index.js",
+    "scripts": {
+        "start": "npx nodemon src/index"
+    },
+    "author": "Vishal",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.1",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "nodemon": "^2.0.20"
+    }
 }
